Added Commands from IT Project template

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -1,6 +1,6 @@
 \documentclass[
     12pt, % Schriftgröße
-    ngerman, % für Umlaute, Silbentrennung etc.
+    american, % für Umlaute, Silbentrennung etc.
     a4paper, % Papierformat
     oneside, % einseitiges Dokument
     titlepage, % es wird eine Titelseite verwendet
@@ -72,6 +72,8 @@
 % ##############################################################################
 % Chapters
 \addpage{introduction}
+\addpage{abstract}
+\addpage{body}
 \addpage{ending}
 % ##############################################################################
 
