Added Eidesstattliche and moved everything over to English

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -75,12 +75,14 @@
 \addpage{abstract}
 \addpage{body}
 \addpage{ending}
+
+
 % ##############################################################################
 
 % glossary
-\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis} % add to table of contents
+\addcontentsline{toc}{chapter}{List of Abbreviations} % add to table of contents
 \setlist[description]{leftmargin=!, labelwidth=5em} % Change for glossaries
-\printglossary[title=Abkürzungsverzeichnis]
+\printglossary[title=List of Abbreviations]
 \setlist[description]{style=standard} % reset settings back to default
 
 
@@ -98,5 +100,7 @@
 %\addpage{declaration}                     % add declaration page
 %\setdefaultleftmargin{1em}{}{}{}{}{}%    % Rand der Aufzählungen in Tabellen anpassen
 %\end{appendix}
+
+\addsubpage{eidesstattliche}
 
 \end{document}
