--- a/Report/setting/packages.tex
+++ b/Report/setting/packages.tex
@@ -1,6 +1,6 @@
 % !TEX root=../report.tex
 % language packages
-\usepackage[ngerman]{babel}
+\usepackage[american]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[dvips,final]{graphicx} % graphics package (jpg possible)
@@ -42,7 +42,8 @@ block=par
 	soul,
 	alltt,
 	xcolor,
-	enumitem
+	enumitem,
+	tabularx
 }
 
 
