--- a/Report/pages/deployment/deployment.tex
+++ b/Report/pages/deployment/deployment.tex
@@ -1,3 +1,9 @@
 % !TEX root=../../report.tex
 
 \Chapter{Deployment}
+
+\Subsection{Gulp}
+
+\addsubpage{deployment/angular.tex}
+\addsubpage{deployment/asp.tex}
+\addsubpage{deployment/electron.tex}
