--- a/Report/pages/electron/electron.tex
+++ b/Report/pages/electron/electron.tex
@@ -1,3 +1,10 @@
 % !TEX root=../../report.tex
 
 \Chapter{Electron}
+
+\Subsection{Node}
+\Subsection{App}
+\Subsection{IPC}
+
+\addsubpage{electron/menu.tex}
+\addsubpage{electron/notifications.tex}
