--- a/Report/setting/configuration.tex
+++ b/Report/setting/configuration.tex
@@ -79,8 +79,8 @@
 %listings
 % codestyle for listings
 % Redifine existing package commands
-\renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
-\renewcommand{\lstlistingname}{Quellcode}
+\renewcommand{\lstlistlistingname}{Source Code Directory}
+\renewcommand{\lstlistingname}{Source Code}
 \input {setting/codestyle}
 
 % Spaltendefinition rechtsbündig mit definierter Breite
