Added Websockts moved some things

--- a/Report/pages/asp/asp.tex
+++ b/Report/pages/asp/asp.tex
@@ -2,8 +2,7 @@
 
 \Chapter{ASP.NET Core}
 
-\Subsection{Autofac DI}
-
-
 \addsubpage{asp/mvc.tex}
 \addsubpage{asp/ef.tex}
+\addsubpage{asp/di.tex}
+\addsubpage{asp/websockets.tex}
