--- a/Report/setting/configuration.tex
+++ b/Report/setting/configuration.tex
@@ -1,18 +1,16 @@
 % Document information
 \newcommand{\titel}{ Cross-plattform development using the Electron Framework, Angular and ASP.NET Core }
-\newcommand{\untertitel}{ } % TODO
 \newcommand{\art}{ Bachelorarbeit }
-\newcommand{\fachgebiet}{} % TODO
 \newcommand{\studienbereich}{Informatik}
-\newcommand{\erstkorrektor}{Prof. Dr. F. Gallwitz}
-\newcommand{\zweitkorrektor}{-Zweitgutachter-} %TODO
-\newcommand{\betreuer}{Sebastian Krog}
-\newcommand{\unternehmen}{KPIT Solutions GmbH}
+\newcommand{\erstkorrektor}{Prof. Dr. M. Teßmann}
+\newcommand{\zweitkorrektor}{Prof. Dr. T. Voit}
 \newcommand{\jahr}{2018}
 \newcommand{\ort}{Nürnberg}
 \newcommand{\logo}{res/images/logo_th.png}
 \newcommand{\matrikelnr}{2731582}
 \newcommand{\autor}{Jan Morawietz}
+\newcommand{\abgabe}{02.09.2018}
+\newcommand{\untertitel}{}
 
 
 % color definitions
