--- a/Report/pages/report_coversheet.tex
+++ b/Report/pages/report_coversheet.tex
@@ -4,21 +4,21 @@
 
 	\begin{center}
 
-		\huge{\textbf{\titel}}\\ \vspace{1.5ex}
-		\LARGE{\textbf{\art}}\\\vspace{1.5ex}
+		\includegraphics[scale=0.20]{\logo} \vspace{15ex}
 
-		\includegraphics[scale=0.25]{\logo} \vspace{4ex}
+
+		\huge{\titel}\\ \vspace{10ex}
+		\LARGE{\textbf{\art}}\\ \vspace{1.5ex}
+		\large{im Studiengang Informatik} \\ \vspace{10ex}
 
 		\normalsize
 		\begin{tabular}{w{5.4cm}p{6cm}} \\ \vspace{1.2ex}
 			vorgelegt von:  & \quad \autor          \\ \vspace{1.2ex}
 			Matrikelnummer: & \quad \matrikelnr     \\ \vspace{1.2ex}
-			Studienbereich: & \quad \studienbereich \\ \vspace{1.2ex}
+			Abgabedatum:    & \quad \abgabe         \\ \vspace{1.2ex}
 			Erstkorrektor:  & \quad \erstkorrektor  \\ \vspace{1.2ex}
 			Zweitkorrektor: & \quad \zweitkorrektor \\ \vspace{1.2ex}
 		\end{tabular}
-
-		\copyright\ \jahr \vspace{5ex}
 
 	\end{center}
 
