worked on intro

--- a/Report/setting/commands.tex
+++ b/Report/setting/commands.tex
@@ -2,7 +2,7 @@
 \newcommand{\ua}{\mbox{u.\,a.\ }}
 \newcommand{\idr}{\mbox{i.\,d.\,R. }}
 \newcommand{\ca}{\mbox{ca.\ }}
-\newcommand{\zB}{\mbox{z.\,B.\ }}
+\newcommand{\zB}{\mbox{e.\,g.\ }}
 \newcommand{\dahe}{\mbox{d.\,h.\ }}
 \newcommand{\vgl}{Vgl.\ }
 \newcommand{\bzw}{bzw.\ }
