--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -3,6 +3,7 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{ms}{MS}{Microsoft}
 \newacronym{mssql}{MSSQL}{Microsoft Structured Query Language}
 \newacronym{ef}{EF}{Entity Framework Core}
 \newacronym{orm}{ORM}{Object Relational Mapper}
@@ -19,7 +20,7 @@
 \newacronym{tcp}{TCP}{Transmission Control Protocol}
 \newacronym{osi}{OSI}{Open Systems Interconnection}
 \newacronym{xml}{XML}{Extensible Markup Language}
-\newacronym{asp}{ASP Core}{Active Server Pages Core}
+\newacronym{asp}{ASP.NET Core}{Active Server Pages .Net Core}
 \newacronym{php}{PHP}{PHP: Hypertext Preprocessor}
 \newacronym{spa}{SPA}{Single Page Application}
 \newacronym{rest}{REST}{Representational State Transfer}
