--- a/Report/pages/introduction.tex
+++ b/Report/pages/introduction.tex
@@ -1,5 +1,6 @@
 % !TEX root=../report.tex
 \Chapter{Introduction}
 
-some cite \cite{angularCli}
-some abbrev \gls{html}
+When developing a new Application there are certain \revMark{things} to be considered. These include if the application is going to be a web or a desktop application. Many applications, like the entire \gls{ms} Office Suite, which used to be pure desktop applications now either have web counterparts or have been moved to the web environment completely. This makes updating the application easy also the developers gain access to all desktop platforms as well as the mobile ones. Frameworks for those types of applications include Angular, jQuery, React, Vue, Ember or Meteor for the frontend as well as \gls{asp}, Django, Express or Ruby on Rails for the Backend.
+
+Although web applications gain in popularity desktop applications have not yet ceased to exist. Reasons for this might be the strict regulations a web application \revMark{is subject}. Many tasks like editing files, communicating with special hardware or quering databases are not possible. Yet these basic tasks are essential for many applications. Another reason why users might prefer desktop applications is the fact that the can be used offline and that a desktop application is what most users are used to.
