finished raw draft of intro

--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,7 +5,7 @@
 
 \newacronym{ms}{MS}{Microsoft}
 \newacronym{mssql}{MSSQL}{Microsoft Structured Query Language}
-\newacronym{ef}{EF}{Entity Framework Core}
+\newacronym{ef}{EF Core}{Entity Framework Core}
 \newacronym{orm}{ORM}{Object Relational Mapper}
 \newacronym{edmx}{EDMX}{Entity Data Model XML}
 \newacronym{pdf}{*.pdf}{Portable Documat Format}
@@ -37,3 +37,4 @@
 \newacronym{blob}{BLOB}{Binary Large OBject}
 \newacronym{url}{URL}{Uniform Resource Locator}
 \newacronym{css}{CSS}{Cascading Style Sheets}
+\newacronym{js}{JS}{JavaScript}
