--- a/Report/pages/introduction.tex
+++ b/Report/pages/introduction.tex
@@ -1,6 +1,16 @@
 % !TEX root=../report.tex
 \Chapter{Introduction}
 
-When developing a new Application there are certain \revMark{things} to be considered. These include if the application is going to be a web or a desktop application. Many applications, like the entire \gls{ms} Office Suite, which used to be pure desktop applications now either have web counterparts or have been moved to the web environment completely. This makes updating the application easy also the developers gain access to all desktop platforms as well as the mobile ones. Frameworks for those types of applications include Angular, jQuery, React, Vue, Ember or Meteor for the frontend as well as \gls{asp}, Django, Express or Ruby on Rails for the Backend.
+When developing a new Application there are certain \revMark{things} to be considered. These include if the application is going to be a web or a desktop application. Many applications, like the entire \gls{ms} Office Suite, which used to be pure desktop applications now either have web counterparts or have been moved to the web environment completely. This gives the developers access to all desktop platforms as well as the mobile ones. Frameworks for those types of applications include Angular, jQuery, React, Vue, Ember or Meteor for the frontend as well as \gls{asp}, Django, Express or Ruby on Rails for the Backend.
 
 Although web applications gain in popularity desktop applications have not yet ceased to exist. Reasons for this might be the strict regulations a web application \revMark{is subject}. Many tasks like editing files, communicating with special hardware or quering databases are not possible. Yet these basic tasks are essential for many applications. Another reason why users might prefer desktop applications is the fact that the can be used offline and that a desktop application is what most users are used to.
+
+With the release of the Electron Framework in 2013 there is a way to combine the strengths of web applications with those of desktop applications. Electron makes it possible to write one single Codebase consistent of \gls{html}, \gls{css} and \gls{js} but still access native \gls{api}, files and Databases. Electron also offers \gls{api}s for Notifications or a systemtray icon which are commonly used in desktop applicaitons.
+
+As a frontend Framework Angular was chosen. Angular is widely used by web developers and offers a greate set of pre-built \gls{ui} elements which follow the Google Material Design guidelines. It is also very well documented and actively developed. \gls{asp} was chosen as the server side framework since there is greate database support through \gls{ef}. It is an easy to learn framework which also is very well documented.
+
+The thesis will discuss which features may not work at all and what adaptations are needed to get others working given this specific combination of frameworks. Furthermore, the advantages and disadvantages compared to a pure desktop or web application will be analyzed.
+
+
+
+% With .Net Core Microsoft made a push towards beeing open sources as well as supporting all major desktop platforms.
