--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -3,6 +3,7 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{ui}{UI}{User Interface}
 \newacronym{ms}{MS}{Microsoft}
 \newacronym{mssql}{MSSQL}{Microsoft Structured Query Language}
 \newacronym{ef}{EF Core}{Entity Framework Core}
