--- a/Report/setting/configuration.tex
+++ b/Report/setting/configuration.tex
@@ -77,8 +77,8 @@
 %listings
 % codestyle for listings
 % Redifine existing package commands
-\renewcommand{\lstlistlistingname}{Source Code Directory}
-\renewcommand{\lstlistingname}{Source Code}
+\renewcommand{\lstlistlistingname}{List of Listings}
+\renewcommand{\lstlistingname}{Listing}
 \input {setting/codestyle}
 
 % Spaltendefinition rechtsbündig mit definierter Breite
