--- a/Report/pages/body.tex
+++ b/Report/pages/body.tex
@@ -1,5 +1,6 @@
 % !TEX root=../report.tex
 
+\addsubpage{basics.tex}
 \addsubpage{angular/angular.tex}
 \addsubpage{electron/electron.tex}
 \addsubpage{asp/asp.tex}
