--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -64,16 +64,6 @@
 }
 
 
-@online{commandPattern,
- author = {Vogel, Eric},
- year = {10.04.2012},
- title = {The Command Pattern in .NET},
- url = {https://visualstudiomagazine.com/articles/2012/04/10/command-pattern-in-net.aspx},
- address = {Visual Studio Magazine},
- urldate = {2017-02-17}
-}
-
-
 @online{compRoot,
  author = {Seemann, Mark},
  year = {28.07.2011},
@@ -110,48 +100,6 @@
  urldate = {2017-03-01},
  number = {2},
  series = {Developer's Guide to Dependency Injection Using Unity}
-}
-
-
-@online{diUnity,
- author = {Practices, Microsoft Patterns {\&}.},
- year = {04.2013},
- title = {Dependency Injection with Unity},
- url = {https://msdn.microsoft.com/en-us/library/dn178463(v=pandp.30).aspx},
- address = {MSDN},
- urldate = {2017-03-01},
- number = {3},
- series = {Developer's Guide to Dependency Injection Using Unity}
-}
-
-
-@online{dry,
- author = {Peters, Chris},
- year = {07.09.2012},
- title = {3 Key Software Principles You Must Understand},
- url = {https://code.tutsplus.com/tutorials/3-key-software-principles-you-must-understand‐net-25161},
- address = {https://code.tutsplus.com},
- urldate = {2017-02-24}
-}
-
-
-@online{duplexWcf,
- author = {Hayden, Ger},
- year = {08.05.2013},
- title = {A Beginner's Guide to Duplex WCF},
- url = {https://www.codeproject.com/articles/491844/a-beginners-guide-to-duplex-wcf},
- address = {Code Project},
- urldate = {2017-03-01}
-}
-
-
-@online{ef7,
- author = {Lerman, Julie},
- year = {Januar 2015},
- title = {Data Points - Looking Ahead to Entity Framework 7},
- url = {https://msdn.microsoft.com/en-us/magazine/dn890367.aspx},
- address = {MSDN},
- urldate = {abgerufen am 17.02.2017}
 }
 
 
@@ -200,42 +148,12 @@
 }
 
 
-@online{extUnity,
- author = {Practices, Microsoft Patterns {\&}.},
- year = {04.2013},
- title = {Extending Unity},
- url = {https://msdn.microsoft.com/en-us/library/dn178462(v=pandp.30).aspx},
- address = {MSDN},
- urldate = {2017-03-01},
- number = {6},
- series = {Developer's Guide to Dependency Injection Using Unity}
-}
-
-
 @online{fluentAPI,
  author = {Tutorials, Entity Framework},
  title = {Fluent API in Code-First},
  url = {http://www.entityframeworktutorial.net/code-first/fluent-api-in-code-first.aspx},
  address = {http://www.entityframeworktutorial.net},
  urldate = {2018-01-26}
-}
-
-
-@online{identity,
- author = {Rastogi, Pranav and Anderson, Rick and Dykstra, Tom and Galloway, Jon and Reitan, Erik},
- year = {14.10.2016},
- title = {Introduction to Identity},
- url = {https://docs.microsoft.com/en-us/aspnet/core/security/authentication/identity},
- urldate = {2017-03-09}
-}
-
-
-@online{identityStripped,
- author = {Foster, Ben},
- year = {07.03.2014},
- title = {ASP.NET Identity Stripped Bare - MVC Part 1},
- url = {http://benfoster.io/blog/aspnet-identity-stripped-bare-mvc-part-1},
- urldate = {2017-03-09}
 }
 
 
@@ -247,18 +165,6 @@
  address = {MSDN},
  urldate = {2017-03-01},
  number = {4},
- series = {Developer's Guide to Dependency Injection Using Unity}
-}
-
-
-@online{interUnity,
- author = {Practices, Microsoft Patterns {\&}.},
- year = {04.2013},
- title = {Interception using Unity},
- url = {https://msdn.microsoft.com/en-us/library/dn178467(v=pandp.30).aspx},
- address = {MSDN},
- urldate = {2017-03-01},
- number = {5},
  series = {Developer's Guide to Dependency Injection Using Unity}
 }
 
@@ -298,69 +204,6 @@
 }
 
 
-@online{msdnIError,
- author = {Microsoft},
- title = {INotifyDataErrorInfo Interface},
- url = {https://msdn.microsoft.com/en-us/library/system.componentmodel.inotifydataerrorinfo(v=vs.110).aspx},
- address = {MSDN},
- urldate = {abgerufen am 17.02.2017}
-}
-
-
-@online{msdnINotify,
- author = {Microsoft},
- title = {INotifyPropertyChanged Interface},
- url = {https://msdn.microsoft.com/en-us/library/system.componentmodel.inotifypropertychanged(v=vs.110).aspx},
- address = {MSDN},
- urldate = {abgerufen am 17.02.2017}
-}
-
-
-@online{msdnOperationContract,
- author = {Microsoft},
- title = {OperationContractAttribute Class},
- url = {https://msdn.microsoft.com/en-us/library/system.servicemodel.operationcontractattribute(v=vs.110).aspx},
- address = {MSDN},
- urldate = {abgerufen am 09.03.2017}
-}
-
-
-@online{msdnRsa,
- author = {Microsoft},
- title = {RSACryptoServiceProvider Class},
- url = {https://msdn.microsoft.com/en-us/library/system.security.cryptography.rsacryptoserviceprovider(v=vs.110).aspx},
- address = {MSDN},
- urldate = {2017-03-09}
-}
-
-
-@online{msdnRsaException,
- author = {Microsoft},
- title = {RSACryptoServiceProvider.Encrypt Method (Byte[],Boolean)},
- url = {https://msdn.microsoft.com/en-us/library/f17a0e2k(v=vs.110).aspx},
- address = {MSDN},
- urldate = {2017-03-09}
-}
-
-
-@online{msdnServiceBehavior,
- author = {Microsoft},
- title = {ServiceBehaviorAttribute Class},
- url = {https://msdn.microsoft.com/en-us/library/system.servicemodel.servicebehaviorattribute(v=vs.110).aspx},
- address = {MSDN},
- urldate = {2017-03-09}
-}
-
-
-@online{msdnServiceContract,
- author = {Microsoft},
- title = {ServiceContractAttribute Class},
- url = {https://msdn.microsoft.com/en-us/library/system.servicemodel.servicecontractattribute(v=vs.110).aspx},
- address = {MSDN},
- urldate = {2017-03-09}
-}
-
-
 @online{mvcOverview,
  author = {Smith, Steve},
  year = {14.10.2016},
@@ -370,14 +213,11 @@
 }
 
 
-@online{mvvmPrism,
- author = {Practices, Microsoft Patterns {\&}.},
- title = {5: Implementing the MVVM Pattern Using the Prism Library 5.0 for WPF},
- url = {https://msdn.microsoft.com/en-us/library/gg405484(v=pandp.40).aspx},
- address = {MSDN},
- urldate = {2017-03-09},
- number = {5},
- series = {Developer's Guide to Microsoft Prism Library 5.0 for WPF}
+@online{ngcomponent,
+ author = {Google},
+ title = {Angular Component Documentation},
+ url = {https://angular.io/api/core/Component},
+ urldate = {2018-06-07}
 }
 
 
@@ -407,72 +247,6 @@
 }
 
 
-@online{packets,
- author = {NulledNocturnal},
- year = {17.08.2013},
- title = {Asynchronous Sockets in C{\#} (2/3)},
- url = {https://www.youtube.com/watch?v=dkr2pUnzOgI},
- address = {Youtube.com},
- urldate = {2017-02-28}
-}
-
-
-@online{poly,
- author = {Wikipedia},
- year = {2017-02-14},
- title = {Polymorphie (Programmierung)},
- url = {https://de.wikipedia.org/wiki/Polymorphie_(Programmierung)},
- address = {Wikipedia},
- urldate = {2017-03-08}
-}
-
-
-@online{prismInit,
- author = {Library, Prism},
- title = {Initializing Applications Using the Prism Library for WPF},
- url = {http://prismlibrary.readthedocs.io/en/latest/WPF/02-Initializing/},
- address = {http://prismlibrary.readthedocs.io},
- urldate = {2017-02-20}
-}
-
-
-@online{prismNavigation,
- author = {Library, Prism},
- title = {Navigation Using the Prism Library for WPF},
- url = {http://prismlibrary.readthedocs.io/en/latest/WPF/08-Navigation/},
- address = {http://prismlibrary.readthedocs.io},
- urldate = {2017-02-20}
-}
-
-
-@online{razorEngine,
- author = {Smith, Steve},
- year = {14.10.2016},
- title = {Rendering HTML with views in ASP.NET Core MVC},
- url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/views/overview},
- urldate = {2017-03-09}
-}
-
-
-@online{relayCommand,
- author = {Bugnion, Laurent},
- year = {Mai 2013},
- title = {MVVM - Commands, RelayCommands and EventToCommand},
- url = {https://msdn.microsoft.com/en-us/magazine/dn237302.aspx},
- address = {MSDN},
- urldate = {2017-02-17}
-}
-
-
-@online{secWcf,
- author = {Bustamante, Michele Leroux},
- title = {Fundamentals of WCF Security},
- url = {http://www.codemag.com/article/0611051},
- address = {Code Magazine},
- urldate = {2017-03-01}
-}
-
-
 @online{serializationAPI,
  author = {Obermeyer, Piet and Hawkins, Jonathan},
  year = {08.2001},
@@ -492,16 +266,6 @@
 }
 
 
-@online{shahar,
- author = {Y, Shahar},
- year = {23.04.2008},
- title = {WPF DataTemplate for Interfaces? Not Supported},
- url = {http://www.dev102.com/2008/04/23/wpf-datatemplate-for-interfaces-not-supported/},
- address = {www.dev102.com},
- urldate = {2017-02-17}
-}
-
-
 @online{staticFiles,
  author = {Anderson, Rick},
  year = {14.10.2016},
@@ -517,53 +281,6 @@
  title = {Task-based Asynchronous Programming},
  url = {https://docs.microsoft.com/en-us/dotnet/standard/parallel-programming/task-based-asynchronous-programming},
  urldate = {2018-02-02}
-}
-
-
-@online{unityWcf,
- author = {Mosely, Steven},
- year = {07.08.2008},
- title = {Usng Unity with a WCF Service},
- url = {http://www.i-avington.com/Posts/Post/usng-unity-with-a-wcf-service},
- urldate = {2017-03-01}
-}
-
-
-@online{wcfCustomAuth,
- author = {Vijeth, C. R.},
- year = {192.12.2013},
- title = {Custom Authentication and Authorization in WCF},
- url = {https://www.codeproject.com/articles/698862/custom-authentication-and-authorization-in-wcf},
- address = {Code Project},
- urldate = {2017-03-09}
-}
-
-
-@online{wcfIntro,
- author = {Chappell, David},
- year = {04.2009},
- title = {Introducing Windows Communication Foundation in .NET Framework 4},
- url = {https://msdn.microsoft.com/en-us/library/ee958158.aspx},
- address = {MSDN},
- urldate = {2017-03-09}
-}
-
-
-@online{wcfServiceContract,
- author = {Microsoft},
- title = {How to: Define a Windows Communication Foundation Service Contract},
- url = {https://msdn.microsoft.com/en-us/library/ms731835(v=vs.110).aspx},
- address = {MSDN},
- urldate = {abgerufen am 02.03.2017}
-}
-
-
-@online{xamlResources,
- author = {Microsoft},
- title = {XAML Resources},
- url = {https://msdn.microsoft.com/en-us/library/ms750613(v=vs.110).aspx},
- address = {MSDN},
- urldate = {2017-02-17}
 }
 
 
