--- a/Report/setting/codestyle.tex
+++ b/Report/setting/codestyle.tex
@@ -77,10 +77,10 @@
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
-	morekeywords={ import, class, export, @NgModule, from }, % keywords
+	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends }, % keywords
 	basicstyle=\ttfamily \color{black} \small \smaller,
 	emphstyle={\color{vs_class}},
-	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule }, % classnames
+	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component }, % classnames
 	showspaces=false,
 	showtabs=false,
 	breaklines=true,
