--- a/Report/setting/commands.tex
+++ b/Report/setting/commands.tex
@@ -1,3 +1,5 @@
+% !TEX root=../report.tex
+
 % Shortcuts with correct space
 \newcommand{\ua}{\mbox{u.\,a.\ }}
 \newcommand{\idr}{\mbox{i.\,d.\,R. }}
@@ -133,7 +135,7 @@
 
 \newcommand*{\myautoref}[1]{\hyperref[{#1}]{\autoref{#1} \vpageref{#1}}}
 \newcommand*{\myref}[1]{\hyperref[{#1}]{\autoref{#1} \nameref{#1} \vpageref{#1}}}
-\newcommand*{\mylineref}[2]{\hyperref[{#1}]{\autoref{#1} \vpageref{#1}, Zeile \ref{line:#2}}}
+\newcommand*{\mylineref}[2]{\hyperref[{#1}]{\autoref{#1} \vpageref{#1}, Line \ref{line:#2}}}
 \newcommand*{\mynameref}[1]{\hyperref[{#1}]{\nameref{#1} \vpageref{#1}}}
 
 \newcommand{\lstcode}[1]{\texttt{#1}}
