--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -1,3 +1,5 @@
+% !TEX root=../report.tex
+
 % ------------------------------------------------------------------------------
 % this file contains all glossary entries
 % ------------------------------------------------------------------------------
@@ -39,3 +41,5 @@
 \newacronym{url}{URL}{Uniform Resource Locator}
 \newacronym{css}{CSS}{Cascading Style Sheets}
 \newacronym{js}{JS}{JavaScript}
+\newacronym{mvvm}{MVVM}{Model-View-ViewModel}
+\newacronym{ts}{TS}{TypeScript}
