--- a/Report/setting/configuration.tex
+++ b/Report/setting/configuration.tex
@@ -1,3 +1,5 @@
+% !TEX root=../report.tex
+
 % Document information
 \newcommand{\titel}{ Cross-plattform development using the Electron Framework, Angular and ASP.NET Core }
 \newcommand{\art}{ Bachelorarbeit }
