--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -17,6 +17,24 @@
 }
 
 
+@online{angularLifecycleHooks,
+ author = {Google},
+ year = {2018},
+ title = {Lifecycle Hooks},
+ url = {https://angular.io/guide/lifecycle-hooks#lifecycle-sequence},
+ urldate = {2018-06-21}
+}
+
+
+@online{angularTemplateSyntax,
+ author = {Google},
+ year = {2018},
+ title = {Template Syntax},
+ url = {https://angular.io/guide/template-syntax},
+ urldate = {2018-06-21}
+}
+
+
 @online{aspAngular,
  author = {Gutsch, J{\"u}rgen},
  year = {04.04.2016},
@@ -215,6 +233,7 @@
 
 @online{ngcomponent,
  author = {Google},
+ year = {2018},
  title = {Angular Component Documentation},
  url = {https://angular.io/api/core/Component},
  urldate = {2018-06-07}
